fix(css): issue with flexbox & overflow

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,19 @@
 html, body {
 	margin: 0;
 	padding: 0;
+	display: flex;
 	width: 100%;
-	height: 100%;
+	justify-content: center safe;
+	flex-direction: column;
+	background-color: #ddd;
 }
 
-body, main {
+html { height: 100%; }
+body { min-height: 100%; }
+
+main, .fill { flex-basis: 0; flex: 1; }
+
+main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -25,26 +33,36 @@ body, main {
 }
 
 header, footer {
-	padding: .4em;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 18pt;
 	font-weight: bold;
+
+	a {
+		padding: .8em .8em;
+		font-size: 12pt;
+	}
 }
 
 header > nav {
 	width: 100%;
 	display: flex;
-	gap: var(--spacing);
 }
-
-main, .fill { flex: 1; }
 
 /* ====================================== HOME PAGE STYLING ===================================== */
 #page--home {
 	width: 80%;
 	align-self: center;
+	font-size: 16pt;
+
+	h1, h2, p, ul { margin: 0; }
+	h1 { font-size: 32pt; }
+	h2 { font-size: 24pt; }
+
+	> * {
+		background-color: #fff;
+		padding: 50px;
+	}
 }
 
 #company-introduction {
@@ -60,5 +78,4 @@ main, .fill { flex: 1; }
 
 #company-title {
 	margin: 0;
-	font-size: 36pt;
 }
